# mpcc

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  test.rviz  top.rviz
config/: iris_wind_param.yaml  mpcc.yaml
include/: log++.h
include/mpcc/: astar.hpp  bezier_curve.h  bezier_curve_test.h  mpc_test.h  mpc_wrapper.h  mpcc_test.h  mpcc_wrapper.h  wind_disturbance.h
include/utils/: backward.hpp  grid_map.h  log++.h  raycast.h  voxel_dilater.hpp  voxel_map.hpp  wind_disturbance.h
launch/: gazebo_test.launch  mpc_kepco_test.launch  mpc_test.launch  mpcc_iris_test.launch  mpcc_kepco_test.launch  mpcc_test.launch  mpcc_typhoon_h480_test.launch  mpcc_typhoon_test.launch  quadrotor_gazebo.launch  quadrotor_with_payload_gazebo.launch  test_circle.launch  test_iris_circle.launch  test_kepco_circle.launch  test_lemniscate.launch  test_typhoon_circle.launch
model/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  quadrotor_model_thrustrates.cpp  quadrotor_mpcc_codegen
model/quadrotor_mpcc/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c
parameters/: default.yaml
scripts/: csv_plot.py  gt_vision_pose.py  manipulator_controller.py  mavros_joy_controller_manipulator.py  path_publisher.py  test_circle.py  test_hover.py  test_lemniscate.py
src/: astar.cpp  bezier_curve_test.cpp  mpc_test.cpp  mpc_wrapper.cpp  mpcc_test.cpp  mpcc_wrapper.cpp  wind.cpp
src/utils/: grid_map.cpp  raycast.cpp  wind.cpp
test/: bezier_curve_test.cpp
